@@ -187,6 +187,7 @@ be used at times to test reports for <I>future</I> public consumption.)
 <LI><A HREF="/data/reports/qcreports_db/output/GXD_GelBand.sql.rpt">GXD Blot w/ Control = No and Strength = Not Applicable</A>
 <LI><A HREF="/data/reports/qcreports_db/output/GXD_SpecNoImage.sql.rpt">Specimen Results with Incomplete Image Annotations</A>
 <LI><A HREF="/data/reports/qcreports_db/output/GXD_SpecImageDiffFigure.sql.rpt">Specimen Results with Image Annotations and Different Figures</A>
+<LI><A HREF="/data/reports/qcreports_db/output/GXD_NoSequence.rpt"">Genes without Sequence with GXD Annotations</A>
 <LI><A HREF="/data/reports/qcreports_db/archive/gxd">Archived GXD Reports</A>
 </OL>
 
